<resources>
    <string name="app_name" translatable="false">mvp_kotlin_login_register_retrofit_example</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">Create New Account</string>
    <string name="forgetpassword">Forgot Password? click here</string>
    <string name="send_code">send code</string>
    <string name="code_sent_success">Code Sent Via SMS, Please Enter The Code</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="please_fill_the_needed_data">Please Fill the needed data</string>
    <string name="code">Code</string>
    <string name="update_password">update password</string>
    <string name="Success">Success</string>
    <string name="orderByPhoto">Order By Photo</string>
    <string name="orderManually">Order Manually</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="action_settings">Settings</string>
    <string name="error_message_no_more_space">Your storage is unavailable.</string>
    <string name="error_message_insufficient_space">You have few space available, please make sure your have more than
        5MB on disk to take pictures!
    </string>
    <string name="ok">Ok</string>
    <string name="error_message">Error occurred!</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app
        settings.
    </string>
    <string name="label_setting">GO TO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="submit_prescription">submit Prescription</string>
    <string name="permission_denied">You denied the permission,</string>
    <string name="add_field">add new value</string>
    <string name="Registration_Success">Registration Success</string>
    <string name="failed_to_get_image">Failed to get image</string>
    <string name="please_choose_phone">Please Choose a Photo</string>
    <string name="remember_me">Remember Me</string>
    <string name="registration">Registration</string>
    <string name="registration_desc">it\'s free and always will be.</string>
    <string name="contact_us">Contact Us</string>



</resources>
